# raylib-starter

./: .clang-format  .clangd-example  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  configure.sh  desktop-build.sh  desktop-configure.sh  flake.nix  nix-test.sh  run.sh  shell.sh  web-build.sh  web-configure.sh  web-server.sh  win-build.sh  win-configure.sh  zig-ar.cmd  zig-ranlib.cmd
.github/workflows/: build.yml  nix-multi-platform.yml
pkgs/: base.nix  desktop.nix  native.nix  web.nix  windows.nix
src/: CMakeLists.txt  main.c  shell.html
